fixed navigation bar spacing issue

--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ menu {
 }
 
 menu .nav-item {
-  padding: 0.03em;
+  padding: 0 0.3em;
 }
 
 footer a {
